# wasm-nes

./: .gitignore  index.html  package.json  rooms
backend/: Cargo.toml
backend/src/: emulator.rs  lib.rs
backend/src/apu/: apu.rs  dmc.rs  mod.rs  noise.rs  pulse.rs  triangle.rs
backend/src/cartridge/mapper/: _000.rs  _001.rs  _002.rs  _003.rs  _007.rs  _066.rs  mapper.rs
backend/src/clock/: clock.rs
backend/src/debug/: apu.rs  bus.rs  cartridge.rs  clock.rs  cpu.rs  disassembly.rs  mod.rs  ppu.rs
backend/src/ppu/: ppu.rs
backend/src/util/: log.rs  panic.rs
backend/tests/: dmc.rs
config/337bd6f1a1163df31bf2633665589ab0/: rom-config.json
config/811b027eaf99c2def7b933c5208636de/: rom-config.json
frontend/: audio.ts  editor.html  index.css  index.html  index.ts
tools/: build-rooms.mjs  disasm.mjs  generate-config.mjs
